--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -5,6 +5,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Costume.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/InputStates.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.cpp
@@ -16,6 +17,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Character.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.h
+${CMAKE_CURRENT_SOURCE_DIR}/InputStates.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.h
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
