Add player_fade_in to settings.cfg and follow style guidelines

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -50,6 +50,7 @@ max_character_slots = 8
 listen_addr         = 127.0.0.1:7003
 location_addr       = 127.0.0.1:7003
 maps                = MapInstances
+player_fade_in      = 380.0
 
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
