Screen resolution setGeometry warning fix & IPLookup
* Restructure of UI to accomodate lower screen resolutions
* Couple of fixes for auth server label change and enable/disable logic
* Add IPLookup functionality, users can now lookup local system IP's
  rather than entering manually
* Few UI bug fixes for linux

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -22,6 +22,9 @@ set(SEGSADMIN_SOURCES
     SetUpData.h
     Globals.cpp
     Globals.h
+    GetIPDialog.cpp
+    GetIPDialog.h
+    GetIPDialog.ui
 
 )
 
