--- a/Projects/CoX/Servers/GameDatabase/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameDatabase/CMakeLists.txt
@@ -2,12 +2,14 @@ SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSync.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncHandler.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncContext.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncService.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSync.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncHandler.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncContext.h
+${CMAKE_CURRENT_SOURCE_DIR}/GameDBSyncService.h
 )
 SET (target_SOURCES
 ${target_CPP}
