--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ platform: x64
 environment:
   global:
     PLATFORMTOOLSET: "v140"
-  MSBUILD_FLAGS: /verbosity:diagnostic /maxcpucount
+  MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
   matrix:
   - CMAKE_GENERATOR: "Visual Studio 15 2017"
     QT5: C:\Qt\5.10.1\msvc2015
