--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ env:
     - CCACHE_TEMPDIR=/tmp/.ccache-temp
     - CCACHE_COMPRESS=1
     - CASHER_TIME_OUT=1000
-
+    - QT=510 BREW=@5.10
+    
 addons_shortcuts:
   addons_clang50: &clang50
     apt:
@@ -86,10 +87,12 @@ install:
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
     else
-      brew install qt;
-      brew link --force qt && sudo ln -s /usr/local/Cellar/qt/5.10.1/mkspecs /usr/local/mkspecs && sudo ln -s /usr/local/Cellar/qt/5.10.1/plugins /usr/local/plugins;
+      brew install cppcheck qt$BREW;
+      bbrew link --force qt$BREW;
     fi
-
+before_script:
+  - '[[ "$TRAVIS_OS_NAME" != linux ]] || . /opt/qt$QT/bin/qt$QT-env.sh'
+  
 script:
   - mkdir build
   - cd build
