--- a/.travis.yml
+++ b/.travis.yml
@@ -86,16 +86,17 @@ install:
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
+      CMAKE_OPTS=""
     else
       brew install cppcheck qt;
       brew link --force qt;
+      QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake)
+      CMAKE_OPTS="-DCMAKE_PREFIX_PATH=${QT5_CMAKE_PREFIX}"
     fi
-before_script:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then /opt/qt$QT/bin/qt$QT-env.sh; fi
   
 script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=${BUILD} -DCMAKE_CXX_FLAGS="${CXX_FLAGS}" -DCMAKE_EXE_LINKER_FLAGS="${CXX_LINKER_FLAGS}" -DBUILD_WITH_CCACHE=1  -DCLANG_TIDY=$(which ${CLANG_TIDY})
+  - cmake .. -DCMAKE_BUILD_TYPE=${BUILD} ${CMAKE_OPTS} -DCMAKE_CXX_FLAGS="${CXX_FLAGS}" -DCMAKE_EXE_LINKER_FLAGS="${CXX_LINKER_FLAGS}" -DBUILD_WITH_CCACHE=1  -DCLANG_TIDY=$(which ${CLANG_TIDY})
   - make VERBOSE=1
 # ctest --output-on-failure
