--- a/.travis.yml
+++ b/.travis.yml
@@ -86,14 +86,14 @@ install:
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
-      CMAKE_OPTS=""
+      CMAKE_OPTS="";
     else
       brew install cppcheck qt;
       brew link --force qt;
-      QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake)
-      CMAKE_OPTS="-DCMAKE_PREFIX_PATH=${QT5_CMAKE_PREFIX}"
+      QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake);
+      CMAKE_OPTS="-DCMAKE_PREFIX_PATH=${QT5_CMAKE_PREFIX}";
     fi
-    export CMAKE_OPTS
+    export CMAKE_OPTS;
   
 script:
   - mkdir build
