* Add player fade-in to settings.cfg creation, edit and save * Start and Stop server buttons now a single dual function button * Settings and logging (settings.cfg) now in it's own class and dialog * General UI overhaul * UI fixes * Change to settings.cfg read logic

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -25,6 +25,9 @@ set(SEGSADMIN_SOURCES
     GetIPDialog.cpp
     GetIPDialog.h
     GetIPDialog.ui
+    SettingsDialog.cpp
+    SettingsDialog.h
+    SettingsDialog.ui
 
 )
 
