--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -77,5 +77,5 @@ set(GAMEDATA_SRC
 )
 add_library(gameData STATIC ${GAMEDATA_SRC})
 add_dependencies(gameData ace_IMP cereal_IMP) # used for Singleton stuff.
-qt5_use_modules(gameData Core)
+target_link_libraries(gameData PUBLIC Qt5::Core)
 set_property(TARGET gameData APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:cereal_IMP,INTERFACE_INCLUDE_DIRECTORIES>")
