--- a/Projects/CoX/Servers/GameDatabase/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameDatabase/CMakeLists.txt
@@ -15,7 +15,7 @@ ${target_INCLUDE}
 )
 ADD_LIBRARY(game_db_sync_lib STATIC ${target_SOURCES})
 target_link_libraries(game_db_sync_lib PUBLIC cox_server_common network_structures)
+target_link_libraries(game_db_sync_lib PUBLIC Qt5::Core Qt5::Sql)
 target_link_libraries(game_db_sync_lib PRIVATE cereal_IMP)
 target_include_directories(game_db_sync_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
-qt5_use_modules(game_db_sync_lib LINK_PUBLIC Core Sql)
