--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -23,5 +23,5 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(gameserver_lib STATIC ${target_SOURCES})
-qt5_use_modules(gameserver_lib Core)
+target_link_libraries(gameserver_lib PUBLIC Qt5::Core)
 ADD_DEPENDENCIES(gameserver_lib gameData ${target_DEPENDS})
