--- a/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
+++ b/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SRCS main.cpp)
 add_executable(texConverter ${SRCS})
-target_link_libraries(texConverter cereal_IMP)
-qt5_use_modules(texConverter Core)
+target_link_libraries(texConverter PRIVATE cereal_IMP)
+target_link_libraries(texConverter PUBLIC Qt5::Core)
 install(TARGETS texConverter
     DESTINATION deploy
 )
