--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -5,8 +5,9 @@ set(HEADERS DummyClass.h)
 
 add_executable(AuthExerciser ${SOURCES} ${HEADERS})
 add_dependencies(AuthExerciser ace_IMP cereal_IMP) # used for Singleton stuff.
-qt5_use_modules(AuthExerciser Core)
-TARGET_LINK_LIBRARIES(AuthExerciser
+target_link_libraries(AuthExerciser PUBLIC Qt5::Core)
+
+TARGET_LINK_LIBRARIES(AuthExerciser PUBLIC
     Threads::Threads
     ${target_DEPENDS}
     AuthProtocol
