--- a/Projects/CoX/Clients/Client/CMakeLists.txt
+++ b/Projects/CoX/Clients/Client/CMakeLists.txt
@@ -9,9 +9,9 @@ add_executable(${PROJECT_NAME} "main.cpp" "qml.qrc")
 target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Quick)
 
 
-install(TARGETS ${PROJECT_NAME}
-    DESTINATION deploy
-)
+#install(TARGETS ${PROJECT_NAME}
+#    DESTINATION deploy
+#)
 IF(WIN32)
     include(Windeployqt)
     windeployqt(${PROJECT_NAME} deploy)
