--- a/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
+++ b/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
@@ -2,6 +2,6 @@ set(SRCS main.cpp)
 add_executable(texConverter ${SRCS})
 target_link_libraries(texConverter PRIVATE cereal_IMP)
 target_link_libraries(texConverter PUBLIC Qt5::Core)
-install(TARGETS texConverter
-    DESTINATION deploy
-)
+#install(TARGETS texConverter
+#    DESTINATION ${CPACK_BIN_DIR}
+#)
