--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -33,3 +33,6 @@ set(SEGSADMIN_SOURCES
 
 add_executable(SEGSAdmin ${SEGSADMIN_SOURCES})
 target_link_libraries(SEGSAdmin PUBLIC Qt5::Core Qt5::Widgets Qt5::Network)
+install(TARGETS SEGSAdmin
+    DESTINATION ${CPACK_BIN_DIR}
+)
