--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -49,7 +49,7 @@ max_character_slots = 8
 [MapServer]  
 listen_addr         = 127.0.0.1:7003
 location_addr       = 127.0.0.1:7003
-maps                = MapInstances
+maps                = DefaultMapInstances
 player_fade_in      = 380.0
 
 [Logging]
