--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -7,3 +7,4 @@ ADD_SUBDIRECTORY(GameData)
 ADD_SUBDIRECTORY(AuthProtocol)
 ADD_SUBDIRECTORY(PasswordHasher)
 ADD_SUBDIRECTORY(Runtime)
+ADD_SUBDIRECTORY(Email)
