Add all maps to `g_defined_map_datas` - Centralize map list and add some helper functions - Send map paths in lowercase - Start looking for all known map names - Running cmake adds all map directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,27 @@ include_directories(Components)
 add_subdirectory(Components)
 add_subdirectory(Utilities)
 add_subdirectory(Projects)
-file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/data)
-file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/DefaultMapInstances/City_00_01)
-file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/DefaultMapInstances/City_01_01)
-file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/DefaultMapInstances/City_02_01)
 
+file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/data)
+
+set(MAPNAMES
+  City_00_01
+  City_01_01 City_01_02 City_01_03
+  City_02_01 City_02_02
+  City_03_01 City_03_02
+  City_04_01 City_04_02
+  City_05_01
+  Hazard_01_01
+  Hazard_02_01
+  Hazard_03_01
+  Hazard_04_01 Hazard_04_02
+  Hazard_05_01
+  Trial_01_01 Trial_01_02
+  Trial_02_01
+  Trial_03_01
+  Trial_04_01 Trial_04_02
+  Trial_05_01
+  )
+foreach(MAPDIR ${MAPNAMES})
+  file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/DefaultMapInstances/${MAPDIR})
+endforeach(MAPDIR)
