Beginnings of FriendHandler

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(target_CPP
     Events/ChatDividerMoved.cpp
     Events/ChatMessage.cpp
     Events/EntitiesResponse.cpp
+    Events/FriendHandler.cpp
     Events/InputState.cpp
     Events/LocationVisited.cpp
     Events/PlaqueVisited.cpp
@@ -47,6 +48,7 @@ SET(target_INCLUDE
     Events/EntitiesResponse.h
     Events/FloatingDamage.h
     Events/FriendsListUpdate.h
+    Events/FriendHandler.h
     Events/InputState.h
     Events/LocationVisited.h
     Events/MapEventTypes.h
