Fix removeFriend Issue, and other small changes ;) Closes #493
- Fixes removeFriend issue
- I lose sight of scope and spend hours working on a framework for Powers ;)
- Framework for Serializing Trays to database
- Framework for Serializing OwnedPowers to database
- Began working on storePowerInfoUpdate()
- Created array for PowerSets
- Began working on SendCharBuildInfo()
- Saved Starting Powers in GetCharBuildInfo()
- Added additional window names to enum

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -15,6 +15,8 @@ set(GAMEDATA_SRC
     entitydata_definitions.h
     entitydata_serializers.cpp
     entitydata_serializers.h
+    trays_serializers.cpp
+    trays_serializers.h
 # Resource file formats
     anim_serializers.cpp
     anim_serializers.h
