Prelim work on Inspirations and Enhancements - Added Starting Inspirations but it crashes the client =( - Added Queued Powers vector and Recharge Powers vector

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -76,3 +76,4 @@ log_minimap         = false
 log_lfg             = false
 log_npcs            = false
 log_animations      = false
+log_animations      = false
