Inspirations! Also fixed Inherent Powers and added FloatingInfo

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -63,6 +63,7 @@ log_db              = false
 log_input           = false
 log_position        = false
 log_orientation     = false
+log_movement        = false
 log_chat            = false
 log_infomsg         = false
 log_emotes          = true
@@ -76,4 +77,4 @@ log_minimap         = false
 log_lfg             = false
 log_npcs            = false
 log_animations      = false
-log_animations      = false
+log_powers          = false
