--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -39,6 +39,7 @@ SET(target_INCLUDE
     EntityStorage.h
     EntityUpdateCodec.h
     Events/GameCommandList.h
+    Events/ChangeTitle.h
     Events/ChatDividerMoved.h
     Events/ChatMessage.h
     Events/ClientStates.h
