- Add ability to check for updates on start up utilising the github API - UI tweaks, icons added and new splash screen (temp in place atm)

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -28,8 +28,15 @@ set(SEGSADMIN_SOURCES
     SettingsDialog.cpp
     SettingsDialog.h
     SettingsDialog.ui
+    NetworkManager.cpp
+    NetworkManager.h
+    UpdateDetailDialog.cpp
+    UpdateDetailDialog.h
+    UpdateDetailDialog.ui
+    AboutDialog.cpp
+    AboutDialog.h
+    AboutDialog.ui
 
 )
-
-add_executable(SEGSAdmin ${SEGSADMIN_SOURCES})
+add_executable(SEGSAdmin WIN32 ${SEGSADMIN_SOURCES})
 target_link_libraries(SEGSAdmin PUBLIC Qt5::Core Qt5::Widgets Qt5::Network)
