Power cleanups and debugging PowerInfoUpdate and Inspirations

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -68,6 +68,7 @@ SET(target_INCLUDE
     Events/StandardDialogCmd.h
     Events/TeamLooking.h
     Events/TeamOffer.h
+    Events/TrayAdd.h
     Events/InfoMessageCmd.h
     Events/InteractWithEntity.h
     Events/WindowState.h
