--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -1,8 +1,5 @@
 find_package(Qt5 COMPONENTS Core REQUIRED)
 set(GAMEDATA_SRC
-    Colors.h
-    serialization_common.h
-
     chardata_definitions.h
     chardata_serializers.cpp
     chardata_serializers.h
@@ -78,4 +75,5 @@ set(GAMEDATA_SRC
 add_library(gameData STATIC ${GAMEDATA_SRC})
 add_dependencies(gameData ace_IMP cereal_IMP) # used for Singleton stuff.
 target_link_libraries(gameData PUBLIC Qt5::Core)
+target_link_libraries(gameData INTERFACE SEGS_Components)
 set_property(TARGET gameData APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:cereal_IMP,INTERFACE_INCLUDE_DIRECTORIES>")
