[skip ci] Large amount of changes, almost full event serialization
will commit the rest of Event-side soon.

--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(target_CPP
     ConfigExtension.cpp
     EventProcessor.cpp
     SEGSEvent.cpp
+    SEGSEventFactory.cpp
     SEGSTimer.cpp
     FixedPointValue.cpp
     Settings.cpp
@@ -24,6 +25,7 @@ SET(target_INCLUDE
     ConfigExtension.h
     EventProcessor.h
     SEGSEvent.h
+    SEGSEventFactory.h
     LinkLevelEvent.h
     SEGSTimer.h
     FixedPointValue.h
@@ -39,6 +41,8 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
+scan_event_types(Common ${CMAKE_CURRENT_SOURCE_DIR})
+add_event_sources(Common target_SOURCES)
 
 add_library(SEGS_Components STATIC ${target_SOURCES} )
 add_dependencies(SEGS_Components ACE_BUILD)
@@ -48,6 +52,10 @@ target_link_libraries(SEGS_Components INTERFACE ace_IMP)
 IF(MINGW)
     target_link_libraries(SEGS_Components INTERFACE ws2_32)
 ENDIF()
+
+if(ENABLE_TESTS)
+    add_subdirectory(UnitTests)
+endif()
 
 
 
