--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -26,6 +26,8 @@ SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
 )
+scan_event_types(CRUDPEvents ${CMAKE_CURRENT_SOURCE_DIR})
+add_event_sources(CRUDPEvents target_SOURCES)
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
@@ -34,6 +36,10 @@ ADD_LIBRARY(CRUDP_Protocol STATIC ${target_SOURCES})
 target_include_directories(CRUDP_Protocol INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(CRUDP_Protocol PUBLIC Qt5::Core)
+target_link_libraries(CRUDP_Protocol INTERFACE SEGS_Components)
 add_dependencies(CRUDP_Protocol ace_IMP)
 
 
+if(ENABLE_TESTS)
+    add_subdirectory(UnitTests)
+endif()
