Move Character helper function to their own file

--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/Character.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.cpp
@@ -13,6 +14,7 @@ SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Character.h
+${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.h
