Cleanup in AuthLink + some other generic touch-ups.

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -4,6 +4,7 @@ set(GAMEDATA_SRC
     chardata_serializers.cpp
     chardata_serializers.h
     clientoptions_definitions.h
+    clientoptions_definitions.cpp
     clientoptions_serializers.cpp
     clientoptions_serializers.h
     playerdata_serializers.cpp
