Started merging @supermandrew's work on Friend handling
Large amount of work on cleaning things up:
* slightly reduced dependencies between game server files and
mapserver's DataHelpers.h
* introduced `add_segs_test` cmake macro to help in registering unit
tests
* move map name/idx queries into map_definitions.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,16 @@ find_package(Qt5 COMPONENTS Core Sql REQUIRED)
 if(ENABLE_TESTS)
     enable_testing()
     find_package(Qt5 COMPONENTS Test REQUIRED)
+    # Event registration support functionality
+    macro(add_segs_test testname) # followed by a list of directories to scan
+        add_executable(${testname} ${testname}.cpp)
+        add_test(${testname} ${testname})
+
+        target_link_libraries(${testname}
+            Qt5::Test
+            ${ARGN}
+        )
+    endmacro()
 endif()
 ##############################################
 # Event registration support functionality
