--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -9,6 +9,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Friend.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Trade.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.h
@@ -22,6 +23,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.h
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.h
+${CMAKE_CURRENT_SOURCE_DIR}/Trade.h
 )
 
 
